fix alignment

--- a/src/app/acc-transaction/acc-transaction.component.css
+++ b/src/app/acc-transaction/acc-transaction.component.css
@@ -1,5 +1,5 @@
 
-/* Styles for the acc transaction component */
+/* Styles for the record transaction component */
 form {
     max-width: 600px;
     margin: 0 auto;
@@ -7,7 +7,6 @@ form {
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f9f9f9;
-    box-sizing: border-box;
 }
 
 label {
@@ -22,7 +21,6 @@ input, ng-select {
     margin-bottom: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-sizing: border-box;
 }
 
 button {
@@ -33,7 +31,6 @@ button {
     color: white;
     cursor: pointer;
     margin-right: 10px;
-    box-sizing: border-box;
 }
 
 button.active {
@@ -64,7 +61,6 @@ button[type="reset"]:hover {
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: #ffffff; /* Add background color */
-    box-sizing: border-box;
 }
 
 .ng-select .ng-select-container {
@@ -73,10 +69,8 @@ button[type="reset"]:hover {
 
 .ng-select .ng-select-container .ng-value-container {
     padding: 8px;
-    box-sizing: border-box;
 }
 
 .ng-select .ng-select-container .ng-input {
     padding: 8px;
-    box-sizing: border-box;
 }
